--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: java
 sudo: false
 script: mvn clean verify
 after_success:
-  - mmvn jacoco:report coveralls:jacoco
+  - mvn clean test jacoco:report coveralls:report
