--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                         <param>fr.univlille1.m2iagl.opl.causechaineffect.challenge.*</param>
                         <param>fr.univlille1.m2iagl.opl.causechaineffect.jdb.*</param>
                         <param>fr.univlille1.m2iagl.opl.causechaineffect.model.*</param>
+                        <param>fr.univlille1.m2iagl.opl.causechaineffect.main.*</param>
                     </targetClasses>
                 </configuration>
             </plugin>
