--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 sudo: false
 script: mvn clean verify
+before_script:
+- chmod +x update-gh-pages.sh
 after_success:
 - mvn -DwithHistory=true org.pitest:pitest-maven:mutationCoverage
 - .utility/update-gh-pages.sh
